--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8080
+server.port=8082
 
 # mybatis ≈‰÷√
 mybatis.type-aliases-package=cn.codesheep.springbt_mybatis_sqlserver.entity
@@ -10,6 +10,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 ## SqlServer ≈‰÷√
 spring.datasource.url=jdbc:mysql://150.158.153.134:3306/tpdb?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=jieblue
 spring.datasource.password=2775856803
