--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 
 server.port=8082
 
-# mybatis ≈‰÷√
+# mybatis √Ö√§√ñ√É
 mybatis.type-aliases-package=cn.codesheep.springbt_mybatis_sqlserver.entity
 mybatis.mapper-locations=classpath:Mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 ## -------------------------------------------------
 
-## SqlServer ≈‰÷√
-spring.datasource.url=jdbc:mysql://150.158.153.134:3306/tpdb?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+## SqlServer √Ö√§√ñ√É
+spring.datasource.url=jdbc:mysql://***.***.***.***:3306/tpdb?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=jieblue
-spring.datasource.password=2775856803
+spring.datasource.username=****
+spring.datasource.password=****
